# meander

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  akk.py  alias.sh  play.py  pyproject.toml  requirements.dev  requirements.txt  setup.cfg
doc/: add_server.md  cors.md  request.md  route.md
example/: README.md  echo-put.py  echo.py  function-ping.py  log-ping.py  reference-ping.py
examples/: README.md  add-numbers.py  add-or-increment.py  add.py  async-ping.py  before.py  echo-put.py  echo.py  function-ping.py  log-ping.py  multi-ping.py  ping.py  reference-ping.py  skip-log-ping.py
meander/: __init__.py  annotate.py  call.py  client.py  connection.py  cors.py  document.py  exception.py  formatter.py  parser.py  payload.py  request.py  response.py  retry_policy.py  router.py  runner.py  server.py  types.py  types_.py
meander/param/: __init__.py  annotate.py  param.py  types.py
notebooks/: Untitled.ipynb  insepct.ipynb
tests/: after.py  before.py  test_annotate.py  test_call.py  test_client.py  test_connection_request.py  test_cors.py  test_formatter.py  test_parser.py  test_retry_policy.py  test_router.py  test_server.py  test_types.py
