[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meander"
version = "0.4.4"

[flake8]
max-line-length = 88

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "A",  # don't clobber python builtins
    "B",  # bugbear: security
    "E",  # pycodestyle
    "F",  # pyflakes
    # "I",  # isort
    # "SIM",  # flake8-simplify
    "ISC",  # string concatenation
    "UP",  # better syntax by version
    "RUF",  # ruff developers
]
